--- a/Pixed/PaletteWindow.xaml
+++ b/Pixed/PaletteWindow.xaml
@@ -30,9 +30,10 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="40"/>
                                 <ColumnDefinition Width="40"/>
+                                <ColumnDefinition Width="40"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding Name}" FontWeight="Bold" Foreground="White" Grid.ColumnSpan="3"/>
-                            <TextBlock Text="{Binding Path}" Foreground="Gray" Grid.ColumnSpan="3" Grid.Row="1"/>
+                            <TextBlock Text="{Binding Name}" FontWeight="Bold" Foreground="White" Grid.ColumnSpan="4"/>
+                            <TextBlock Text="{Binding Path}" Foreground="Gray" Grid.ColumnSpan="4" Grid.Row="1"/>
                             <Image Source="{Binding BitmapImage}" Grid.Row="2"/>
                             <Button Grid.Column="1" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
                                 <Button.ToolTip>
@@ -42,7 +43,15 @@
                                 </Button.ToolTip>
                                 <Image Source="./Resources/Icons/checkmark.png"/>
                             </Button>
-                            <Button Grid.Column="2" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
+                            <Button Grid.Column="2" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
+                                <Button.ToolTip>
+                                    <ToolTip Background="Black" BorderThickness="0">
+                                        <controls:SimpleTooltip Title="Rename palette"/>
+                                    </ToolTip>
+                                </Button.ToolTip>
+                                <Image Source="./Resources/Icons/common/pencil.png"/>
+                            </Button>
+                            <Button Grid.Column="3" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
                                 <Button.ToolTip>
                                     <ToolTip Background="Black" BorderThickness="0">
                                         <controls:SimpleTooltip Title="Remove palette from disk"/>
