--- a/Pixed/Windows/Prompt.xaml
+++ b/Pixed/Windows/Prompt.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="Pixed.Windows.LayerEditNameWindow"
+﻿<Window x:Class="Pixed.Windows.Prompt"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pixed.Windows"
         mc:Ignorable="d"
-        Title="Edit layer name" MinWidth="200"
+        Title="Prompt" MinWidth="200"
         MinHeight="150" ResizeMode="NoResize" 
         ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner" WindowStyle="SingleBorderWindow">
     <StackPanel>
-        <TextBlock Text="Enter new layer name:" Margin="10"/>
-        <TextBox x:Name="name" Margin="10"/>
+        <TextBlock Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=local:Prompt}}" Margin="10"/>
+        <TextBox x:Name="textBox" Margin="10" Text="{Binding DefaultValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:Prompt}}"/>
         <Button Content="OK" Click="Button_Click"
-                Height="24" MinWidth="80" Padding="10,0" TextOptions.TextFormattingMode="Display" Margin="10"/>
+            Height="24" MinWidth="80" Padding="10,0" TextOptions.TextFormattingMode="Display" Margin="10"/>
     </StackPanel>
 </Window>
