--- a/Pixed/App.xaml
+++ b/Pixed/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application x:Class="Pixed.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Pixed"
              StartupUri="MainWindow.xaml">
