--- a/Pixed/Styles.xaml
+++ b/Pixed/Styles.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
+﻿<!--<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="{x:Type Button}" x:Key="LayersButton">
         <Setter Property="Background" Value="#3f3f3f"/>
@@ -101,4 +101,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-</ResourceDictionary>
+</ResourceDictionary>-->
