--- a/Pixed/App.axaml
+++ b/Pixed/App.axaml
@@ -3,5 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Pixed">
     <Application.Resources>
+      <ResourceDictionary>
+        <ResourceDictionary.MergedDictionaries>
+          <ResourceInclude Source="/Styles.axaml"/>
+        </ResourceDictionary.MergedDictionaries>
+      </ResourceDictionary>
     </Application.Resources>
 </Application>
