--- a/Pixed/Windows/MainWindow.axaml
+++ b/Pixed/Windows/MainWindow.axaml
@@ -24,24 +24,24 @@
         </Grid.ColumnDefinitions>
         <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
             <StackPanel Margin="8">
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-pen.png" Name="tool_pen" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-vertical-mirror-pen.png" Name="tool_mirror_pen" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-paint-bucket.png" Name="tool_paint_bucket" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-colorswap.png" Name="tool_colorswap" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-eraser.png" Name="tool_eraser" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-stroke.png" Name="tool_stroke" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-rectangle.png" Name="tool_rectangle" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-circle.png" Name="tool_circle" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-move.png" Name="tool_move" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-shape-select.png" Name="tool_shape_select" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-rectangle-select.png" Name="tool_rectangle_select" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-lasso-select.png" Name="tool_lasso_select" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-lighten.png" Name="tool_lighten" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-dithering.png" Name="tool_dithering" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-colorpicker.png" Name="tool_colorpicker" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-noise.png" Name="tool_noise" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-noise-fill.png" Name="tool_noise_fill" IsCheckedChanged="ToolRadio_Checked"/>
-                <RadioButton GroupName="Tool" Content="avares://Pixed/Resources/Icons/tools/tool-outliner.png" Name="tool_outliner" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-pen.png" Name="tool_pen" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-vertical-mirror-pen.png" Name="tool_mirror_pen" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-paint-bucket.png" Name="tool_paint_bucket" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-colorswap.png" Name="tool_colorswap" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-eraser.png" Name="tool_eraser" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-stroke.png" Name="tool_stroke" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-rectangle.png" Name="tool_rectangle" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-circle.png" Name="tool_circle" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-move.png" Name="tool_move" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-shape-select.png" Name="tool_shape_select" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-rectangle-select.png" Name="tool_rectangle_select" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-lasso-select.png" Name="tool_lasso_select" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-lighten.png" Name="tool_lighten" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-dithering.png" Name="tool_dithering" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-colorpicker.png" Name="tool_colorpicker" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-noise.png" Name="tool_noise" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-noise-fill.png" Name="tool_noise_fill" IsCheckedChanged="ToolRadio_Checked"/>
+              <controls:ToolRadioButton Theme="{StaticResource ToolRadio}" Source="avares://Pixed/Resources/Icons/tools/tool-outliner.png" Name="tool_outliner" IsCheckedChanged="ToolRadio_Checked"/>
             </StackPanel>
         </ScrollViewer>
         <Grid x:Name="mainSection" Grid.Column="1">
