--- a/Pixed/Styles.axaml
+++ b/Pixed/Styles.axaml
@@ -3,15 +3,89 @@
   <Design.PreviewWith>
     <Border Padding="20">
       <StackPanel Spacing="10">
-        <RadioButton Background="Green" >
+        <RadioButton>
           <Image Source="avares://Pixed/Resources/Icons/common/arrow-left.png" Width="40" Height="40"/>
         </RadioButton>
-        <RadioButton Content="Option 2" />
-        <RadioButton IsEnabled="False" Content="Option 3" />
-        <RadioButton Content="Option 2" />
       </StackPanel>
     </Border>
   </Design.PreviewWith>
+  <ControlTheme x:Key="LayersButton" TargetType="Button">
+    <Setter Property="Background" Value="#3f3f3f"/>
+    <Setter Property="BorderBrush" Value="#333"/>
+    <Setter Property="BorderThickness" Value="0, 1, 0, 0"/>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type Button}">
+          <Border Background="{TemplateBinding Background}">
+            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+          </Border>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+    <Style Selector="^:pointerover">
+      <Setter Property="Background" Value="#444"/>
+    </Style>
+  </ControlTheme>
+  <ControlTheme x:Key="FramesButton" TargetType="Button">
+    <Setter Property="Background" Value="#3A3A3A"/>
+    <Setter Property="BorderBrush" Value="#333"/>
+    <Setter Property="BorderThickness" Value="0, 1, 0, 0"/>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type Button}">
+          <Border Background="{TemplateBinding Background}">
+            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+          </Border>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+    <Style Selector="^:pointerover">
+      <Setter Property="Background" Value="#444"/>
+    </Style>
+  </ControlTheme>
+  <ControlTheme x:Key="CreateFrameButton" TargetType="Button">
+    <Setter Property="Background" Value="#222"/>
+    <Setter Property="BorderBrush" Value="#888"/>
+    <Setter Property="BorderThickness" Value="3"/>
+    <Setter Property="Margin" Value="0, 8, 0, 0"/>
+    <Setter Property="FontSize" Value="13"/>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type Button}">
+          <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Margin="{TemplateBinding Margin}">
+            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+          </Border>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+    <Style Selector="^:pointerover">
+      <Setter Property="BorderBrush" Value="#039BE5"/>
+    </Style>
+  </ControlTheme>
+  <ControlTheme x:Key="ToolButton" TargetType="Button">
+    <Setter Property="Width" Value="46"/>
+    <Setter Property="Height" Value="46"/>
+    <Setter Property="BorderThickness" Value="3"/>
+    <Setter Property="Background" Value="#3a3a3a"/>
+    <Setter Property="BorderBrush" Value="#3a3a3a"/>
+    <Setter Property="Template">
+      <ControlTemplate TargetType="RadioButton">
+        <Border BorderThickness="{TemplateBinding BorderThickness}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    Background="{TemplateBinding Background}">
+          <ContentPresenter
+                Name="PART_ContentPresenter"
+                Margin="{TemplateBinding Padding}"
+                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                Content="{TemplateBinding Content}"
+                ContentTemplate="{TemplateBinding ContentTemplate}"
+                Foreground="{TemplateBinding Foreground}"
+                RecognizesAccessKey="True" />
+        </Border>
+      </ControlTemplate>
+    </Setter>
+  </ControlTheme>
   <ControlTheme x:Key="ToolRadio" TargetType="RadioButton">
     <Style Selector="^:checked">
       <Setter Property="BorderBrush" Value="#039BE5"/>
