--- a/Pixed/App.axaml
+++ b/Pixed/App.axaml
@@ -7,12 +7,13 @@
     <Application.Resources>
       <ResourceDictionary>
         <ResourceDictionary.MergedDictionaries>
-          <ResourceInclude Source="/Styles.axaml"/>
+          <ResourceInclude Source="/ControlThemes.axaml"/>
         </ResourceDictionary.MergedDictionaries>
       </ResourceDictionary>
     </Application.Resources>
   <Application.Styles>
     <FluentTheme />
     <templates:PixiPerfectColorPickerTheme />
+	  <StyleInclude Source="/Styles.axaml"/>
   </Application.Styles>
 </Application>
