--- a/Pixed/Styles.axaml
+++ b/Pixed/Styles.axaml
@@ -1,117 +1,34 @@
-﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Styles xmlns="https://github.com/avaloniaui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+        xmlns:idd="clr-namespace:Avalonia.Xaml.Interactions.DragAndDrop;assembly=Avalonia.Xaml.Interactions.DragAndDrop"
+        xmlns:b="using:Pixed.Input">
   <Design.PreviewWith>
     <Border Padding="20">
-      <StackPanel Spacing="10">
-        <RadioButton>
-          <Image Source="avares://Pixed/Resources/Icons/common/arrow-left.png" Width="40" Height="40"/>
-        </RadioButton>
-      </StackPanel>
+      <!-- Add Controls for Previewer Here -->
     </Border>
   </Design.PreviewWith>
-  <ControlTheme x:Key="LayersButton" TargetType="Button">
-    <Setter Property="Background" Value="#3f3f3f"/>
-    <Setter Property="BorderBrush" Value="#333"/>
-    <Setter Property="BorderThickness" Value="0, 1, 0, 0"/>
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="{x:Type Button}">
-          <Border Background="{TemplateBinding Background}">
-            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-          </Border>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-    <Style Selector="^:pointerover">
-      <Setter Property="Background" Value="#444"/>
-    </Style>
-  </ControlTheme>
-  <ControlTheme x:Key="FramesButton" TargetType="Button">
-    <Setter Property="Background" Value="#3A3A3A"/>
-    <Setter Property="BorderBrush" Value="#333"/>
-    <Setter Property="BorderThickness" Value="0, 1, 0, 0"/>
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="{x:Type Button}">
-          <Border Background="{TemplateBinding Background}">
-            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-          </Border>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-    <Style Selector="^:pointerover">
-      <Setter Property="Background" Value="#444"/>
-    </Style>
-  </ControlTheme>
-  <ControlTheme x:Key="CreateFrameButton" TargetType="Button">
-    <Setter Property="Background" Value="#222"/>
-    <Setter Property="BorderBrush" Value="#888"/>
-    <Setter Property="BorderThickness" Value="3"/>
-    <Setter Property="Margin" Value="0, 8, 0, 0"/>
-    <Setter Property="FontSize" Value="13"/>
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="{x:Type Button}">
-          <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Margin="{TemplateBinding Margin}">
-            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-          </Border>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-    <Style Selector="^:pointerover">
-      <Setter Property="BorderBrush" Value="#039BE5"/>
-    </Style>
-  </ControlTheme>
-  <ControlTheme x:Key="ToolButton" TargetType="Button">
-    <Setter Property="Width" Value="46"/>
-    <Setter Property="Height" Value="46"/>
-    <Setter Property="BorderThickness" Value="3"/>
-    <Setter Property="Background" Value="#3a3a3a"/>
-    <Setter Property="BorderBrush" Value="#3a3a3a"/>
-    <Setter Property="Template">
-      <ControlTemplate TargetType="RadioButton">
-        <Border BorderThickness="{TemplateBinding BorderThickness}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    Background="{TemplateBinding Background}">
-          <ContentPresenter
-                Name="PART_ContentPresenter"
-                Margin="{TemplateBinding Padding}"
-                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                Content="{TemplateBinding Content}"
-                ContentTemplate="{TemplateBinding ContentTemplate}"
-                Foreground="{TemplateBinding Foreground}"
-                RecognizesAccessKey="True" />
-        </Border>
-      </ControlTemplate>
-    </Setter>
-  </ControlTheme>
-  <ControlTheme x:Key="ToolRadio" TargetType="RadioButton">
-    <Style Selector="^:checked">
-      <Setter Property="BorderBrush" Value="#039BE5"/>
-    </Style>
+	<Style Selector="ListBox.FramesDragAndDrop">
+		<Style.Resources>
+			<b:FramesDragDropHandler x:Key="FramesDragDropHandler" />
+		</Style.Resources>
+		<Setter Property="(i:Interaction.Behaviors)">
+			<i:BehaviorCollectionTemplate>
+				<i:BehaviorCollection>
+					<idd:ContextDropBehavior Handler="{StaticResource FramesDragDropHandler}" />
+				</i:BehaviorCollection>
+			</i:BehaviorCollectionTemplate>
+		</Setter>
+	</Style>
 
-    <Setter Property="Width" Value="46"/>
-    <Setter Property="Height" Value="46"/>
-    <Setter Property="BorderThickness" Value="3"/>
-    <Setter Property="Background" Value="#3a3a3a"/>
-    <Setter Property="BorderBrush" Value="#3a3a3a"/>
-    <Setter Property="Template">
-      <ControlTemplate TargetType="RadioButton">
-        <Border BorderThickness="{TemplateBinding BorderThickness}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    Background="{TemplateBinding Background}">
-          <ContentPresenter
-                Name="PART_ContentPresenter"
-                Margin="{TemplateBinding Padding}"
-                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                Content="{TemplateBinding Content}"
-                ContentTemplate="{TemplateBinding ContentTemplate}"
-                Foreground="{TemplateBinding Foreground}"
-                RecognizesAccessKey="True" />
-        </Border>
-      </ControlTemplate>
-    </Setter>
-  </ControlTheme>
-</ResourceDictionary>
+	<Style Selector="ListBox.FramesDragAndDrop ListBoxItem">
+		<Setter Property="HorizontalContentAlignment" Value="Stretch" />
+		<Setter Property="(i:Interaction.Behaviors)">
+			<i:BehaviorCollectionTemplate>
+				<i:BehaviorCollection>
+					<idd:ContextDragBehavior HorizontalDragThreshold="3" VerticalDragThreshold="3" />
+				</i:BehaviorCollection>
+			</i:BehaviorCollectionTemplate>
+		</Setter>
+	</Style>
+</Styles>
